# image-gp-6

./: .gitmodules  CMakeLists.txt  pull.sh
include/: config.h  custom_transformer.h  float_operations.h  helper.h  image_operations.h  images.h  slr.h
src/: custom_transformer.cpp  main.cpp  main_old.cpp
